# Fumi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  biome.json  package.json  tailwind.config.js  tsconfig.json  vite.config.mts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
src/: vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/crates/fumi_accounts/: Cargo.toml
src-tauri/crates/fumi_accounts/src/: binarycookies.rs  lib.rs  models.rs  process.rs  roblox.rs  storage.rs
src-tauri/crates/fumi_accounts/src/storage/: tests.rs
src-tauri/crates/fumi_automatic_execution/: Cargo.toml
src-tauri/crates/fumi_automatic_execution/src/: lib.rs  models.rs  storage.rs
src-tauri/crates/fumi_executor_core/: Cargo.toml
src-tauri/crates/fumi_executor_core/src/: lib.rs  ports.rs
src-tauri/crates/fumi_luau_format/: Cargo.toml
src-tauri/crates/fumi_luau_format/src/: lib.rs  tests.rs
src-tauri/crates/fumi_metadata/: Cargo.toml
src-tauri/crates/fumi_metadata/src/: backup.rs  error.rs  io.rs  lib.rs  migration.rs  registry.rs  schema.rs
src-tauri/crates/fumi_workspace/: Cargo.toml
src-tauri/crates/fumi_workspace/src/: lib.rs  models.rs  storage.rs
src-tauri/crates/fumi_workspace/src/storage/: tests.rs
src-tauri/icons/: icon.icns
src-tauri/src/: binarycookies.rs  command.rs  dialog.rs  events.rs  lib.rs  lifecycle.rs  main.rs  menu.rs  state.rs
src-tauri/src/accounts/: binarycookies.rs  commands.rs  mod.rs  models.rs  process.rs  roblox.rs  storage.rs
src-tauri/src/accounts/storage/: tests.rs
src-tauri/src/automatic_execution/: commands.rs  mod.rs  models.rs  storage.rs
src-tauri/src/executor/: commands.rs  ipc.rs  mod.rs  models.rs  ports.rs  tests.rs
src-tauri/src/luau/: mod.rs  models.rs  parser.rs
src-tauri/src/metadata/: backup.rs  error.rs  io.rs  migration.rs  mod.rs  registry.rs  schema.rs
src-tauri/src/workspace/: commands.rs  mod.rs  models.rs  storage.rs
src-tauri/src/workspace/commands/: archive.rs  files.rs  mod.rs  session.rs
src-tauri/src/workspace/commands/files/: tests.rs
src-tauri/src/workspace/storage/: tests.rs
src-tauri/tests/: schema_export_tests.rs
src/components/accounts/: AccountListItem.tsx  AccountsAddModal.tsx  AccountsEmptyState.tsx  AccountsErrorBanner.tsx  AccountsList.tsx  AccountsScreen.tsx  accountsScreen.type.ts
src/components/app/: AppAnimatedText.tsx  AppCommandPalette.tsx  AppCommandPaletteScopeButton.tsx  AppDragDropOverlay.tsx  AppIcon.tsx  AppIconButton.tsx  AppInput.tsx  AppSearchField.tsx  AppSelect.tsx  AppSettingsScreen.tsx  AppSettingsToggle.tsx  AppSettingsWindow.tsx  AppSidebar.tsx  AppTooltip.tsx  AppTooltipHost.tsx  AppTooltipLayer.tsx  AppTopbar.tsx  AppTopbarExecutorControls.tsx  AppTopbarTrafficLights.tsx  app.type.ts  appDragDropOverlay.type.ts  appForm.type.ts  appShell.type.ts  appTooltip.type.ts  appVisual.type.ts  executorPortLabel.test.ts  executorPortLabel.ts
src/components/automaticExecution/: AutomaticExecutionEditor.tsx  AutomaticExecutionEditor.type.ts  AutomaticExecutionScreen.tsx  AutomaticExecutionScriptRow.tsx  AutomaticExecutionSidebar.tsx  automaticExecution.type.ts
src/components/scriptLibrary/: ScriptLibraryBadges.tsx  ScriptLibraryCard.tsx  ScriptLibraryScreen.tsx  ScriptLibraryToolbar.tsx  scriptLibrary.type.ts
src/components/workspace/: AppCodeCompletion.tsx  WorkspaceActionsButton.tsx  WorkspaceActionsDropdown.tsx  WorkspaceActionsProcessList.tsx  WorkspaceEditor.tsx  WorkspaceEditorOutlineSidebar.tsx  WorkspaceEditorRegion.tsx  WorkspaceEditorSearchActions.tsx  WorkspaceEditorSearchPanel.tsx  WorkspaceEditorSearchReplaceControls.tsx  WorkspaceEditorSurface.tsx  WorkspaceErrorBanner.tsx  WorkspaceExecutionHistoryModal.tsx  WorkspaceExecutionHistoryPreview.tsx  WorkspaceExecutionHistorySidebar.tsx  WorkspaceExecutorOutputPanel.tsx  WorkspaceMessageState.tsx  WorkspaceOutlinePanel.tsx  WorkspaceReadyScreen.tsx  WorkspaceScreen.tsx  WorkspaceTabBar.tsx  robloxProcessLabel.test.ts  robloxProcessLabel.ts  workspace.type.ts  workspaceActionsDropdown.type.ts  workspaceEditor.type.ts  workspaceEditorSearchPanel.type.ts  workspaceExecutionHistory.type.ts  workspaceFeedback.type.ts  workspaceOutlinePanel.type.ts  workspaceScreen.type.ts  workspaceTabBar.type.ts
src/constants/accounts/: accounts.ts
src/constants/app/: app.ts  appStore.ts  commandPalette.ts  hotkeys.ts  input.ts  settings.ts  settings.type.ts  sidebar.ts  startup.ts  topbar.ts  updater.ts
src/constants/luau/: luau.ts  (+41 more)
src/mainview/: App.tsx  appScreens.tsx  index.css  index.html  main.tsx  mainview.type.ts
src/view/: App.tsx  appScreens.tsx  getAppScreen.tsx  index.css  main.tsx  startApp.tsx
src/workers/: luauAnalysis.worker.ts
(+705 files in other folders)
