[package]
name = "fumi"
version = "1.0.3"
description = "Elegant and soft UI wrapper for MacSploit and OpiumWare."
authors = ["FrozenProductions"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.88.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[lib]
name = "fumi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
anyhow = "1.0"
flate2 = "1.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5.1", features = ["devtools", "macos-private-api"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.0"
uuid = { version = "1.18.1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
objc-foundation = "0.1.1"
objc_id = "0.1.1"
