[package]
name = "fumi"
version = "1.0.9"
description = "Elegant and soft UI wrapper for MacSploit and OpiumWare."
authors = ["FrozenProductions"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.89"

[workspace]
members = [
    ".",
    "crates/fumi_accounts",
    "crates/fumi_automatic_execution",
    "crates/fumi_executor_core",
    "crates/fumi_luau_format",
    "crates/fumi_metadata",
    "crates/fumi_workspace",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
flate2 = "1.1"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }
schemars = { version = "1.2.1", features = ["preserve_order", "uuid1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.23.1", features = ["v4"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[lib]
name = "fumi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
anyhow.workspace = true
flate2.workspace = true
fumi_accounts = { path = "crates/fumi_accounts" }
fumi_automatic_execution = { path = "crates/fumi_automatic_execution" }
fumi_executor_core = { path = "crates/fumi_executor_core" }
fumi_luau_format = { path = "crates/fumi_luau_format" }
fumi_metadata = { path = "crates/fumi_metadata" }
fumi_workspace = { path = "crates/fumi_workspace" }
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.11.2", features = ["devtools", "macos-private-api"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
thiserror.workspace = true
uuid.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
objc-foundation = "0.1.1"
objc_id = "0.1.1"
